# genericmud

./: .gitignore  README.md  WINDOWS.md  build_windows.bat  pyproject.toml  run.bat  run_genericmud.py
.github/workflows/: build-windows.yml
frontend/: index.html
frontend/src/: app.js  audio.js  input.js  output.js  status.js  style.css  ws.js
genericmud/: __init__.py  __main__.py  app.py  completion.py  help_text.py  navigation.py  resources.py  safepath.py  web_launcher.py
genericmud/automation/: channels.py  engine.py
genericmud/bridge/: protocol.py  static_server.py  ws_server.py
genericmud/config/: keymap.py  ui_prefs.py  update_prefs.py  worlds.py
genericmud/model/: buffer.py
genericmud/packs/: __init__.py  __main__.py  git_sources.py  known_muds.py  loader.py  manifest.py  manifest_sources.py  setup.py  (+6 more)
tests/: helpers.py  test_ansi.py  test_app.py  test_app_packs.py  test_audit_regressions.py  test_channel_review.py  test_channels.py  test_completion.py  test_config_dir.py  test_connection_containment.py  test_connection_loopback.py  test_crashlog.py  test_diag_trace.py  test_diaglog.py  test_dialect_coexistence.py  test_engine.py  test_git_sources.py  test_help_text.py  test_hygiene.py  test_keymap.py  test_known_muds.py  test_login.py  test_lua_runtime.py  test_manifest_sync.py  test_mccp_tls_pipeline.py  test_mudball_lifts.py  test_mushclient_compat.py  test_navigation.py  test_pack_boundary.py  test_pack_download_security.py  test_pack_loader.py  test_pack_require.py  test_pack_store.py  test_protocol_hardening.py  test_protocol_parsers.py  test_pygame_backend.py  test_reconnect.py  test_review_cursor.py  test_safe_walk.py  test_safepath.py  (+23 more)
tools/: sweep_vault.py
(+36 files in other folders)
