[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genericmud"
version = "0.5.2"
description = "Accessible, cross-platform, self-voicing MUD client"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Matt Alvernaz" }]

# Lua powers the scripting layer (native + VIPMud + MUSHclient soundpacks), so it's a core
# runtime dependency. `regex` gives trigger matching a per-match timeout so a pack's
# catastrophic pattern can't hang the engine (ReDoS). Transport/protocol are otherwise stdlib.
# Native voice and the webview shell stay optional extras.
dependencies = [
  "lupa>=2.0",
  "regex>=2024.0",
]

[project.optional-dependencies]
# localhost engine<->renderer bridge + webview shell
gui = [
  "wxPython>=4.2",       # native UI (default)
  "websockets>=12",      # web UI bridge (--web)
  "pywebview>=5",        # web UI shell (--web)
]
# self-voicing backends; platform-specific wheels resolve per-OS
voice = [
  "accessible_output2>=0.16; platform_system == 'Windows' or platform_system == 'Darwin'",
  "pywin32>=306; platform_system == 'Windows'",  # SAPI5 fallback voice
]
# native soundpack audio playback (the SoundBus pygame backend; --web doesn't need it)
audio = [
  "pygame>=2.5",
]
# standalone .exe packaging (run on Windows)
package = [
  "pyinstaller>=6",
]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
